# PDF

./: .gitignore  Makefile  README.md  config.py  main.py  pdf-farge - Copy - Copy - Copy - Copy.py  pdf_highlighter.py  pdf_processor.py  pdf_utils.py  pyproject.toml  requirements.txt  setup.py  shortcuts.py  test_window.py  ui.py
.github/workflows/: ci.yml
pdf_highlighter/: __init__.py  app.py  utils.py
pdf_highlighter/gui/: components.py
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  pdf_processor.py  pdf_utils.py
src/pdf_highlighter/: __init__.py
src/pdf_highlighter/ui/: main_window.py  viewer.py
src/ui/: __init__.py  base_window.py  highlight_handler.py  main_window.py  pdf_view.py  qt_imports.py  search_handler.py  shortcuts.py  thumbnail_view.py  ui_components.py  viewer.py
src/ui/widgets/: about_dialog.py  color_picker.py  results_table.py
src/utils/: __init__.py  log_handler.py  pdf_handler.py  pdf_search.py  pdf_utils.py  startup_validator.py  validators.py
tests/: test_imports.py  test_pdf_utils.py
tests/test_core/: test_pdf_processor.py  test_pdf_utils.py
