[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-highlighter"
version = "2.0.0"
description = "A PyQt5-based PDF viewer and highlighter application"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "5446-boop", email = "" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business",
]
dependencies = [
    "PyQt5>=5.15.0",
    "PyMuPDF>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.9.0",
    "flake8>=4.0.0",
]

[project.scripts]
pdf-highlighter = "pdf_highlighter.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_highlighter"]

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
strict = true